première animation d'accueil

--- a/home.html
+++ b/home.html
@@ -3,15 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Portfolio</title>
-		<link rel="stylesheet" type="text/css" href="home-style.css">
+		<link rel="stylesheet" type="text/css" href="./styles/home-style.css">
 	</head>
 	<body>
-		<header>
-			<h1>Tom Vaillant</h1>
-			<hr>
-			<h2>Concepteur developpeur d'application</h2>
-		</header>
 		<main>
+			<div id="matrix"></div>
 			<section class="aboutMe">
 				<h3>À propos de moi</h3>
 			</section>
@@ -42,4 +38,6 @@
 			</div>
 			<p>Tom Vaillant - Copyright &copy; 2024 All rights reserved</p>
 		</footer>
+		<script src="./scripts/animations.js"></script>
+	</body>
 </html>
