--- a/home.html
+++ b/home.html
@@ -19,11 +19,11 @@
 			</section>
 			<section class="contact">
 				<h3>Me contacter</h3>
-				<form action="">
+				<form action="" class="mail">
 					<input type="text"  id="name"    name="name"    placeholder="NOM et Prénom" required>
 					<input type="email" id="email"   name="email"   placeholder="Email" 		required>
 					<textarea 			id="message" name="message" placeholder="Votre message" required></textarea>
-					<input type="submit" value="Envoyer">
+					<input type="submit" value="Envoyer" id="send">
 				</form>
 			</section>
 		</main>
