ajouts des icons et organisation des éléments du footer

--- a/home.html
+++ b/home.html
@@ -29,14 +29,72 @@
 		</main>
 		<footer>
 			<div>
-				<img src="" alt="">
-				<p>Hérouville-Saint-Clair, Calvados, France</p>
-				<img src="" alt="">
-				<p>Téléphone : 07 83 95 79 41</p>
-				<img src="" alt="">
-				<p>Email : contact@tomvaillant.fr</p>
+				<div class="name">
+					<p>Tom<br>Vaillant</p>
+				</div>
+				<div class="contacts">
+					<div class="mail">
+						<img src="./ui/images/icon-mail.svg" alt="">
+						<a 
+							href="mailto:contact@tom-vaillant.ovh"
+							>
+							contact@tom-vaillant.ovh
+						</a>
+					</div>
+					<div class="github">
+						<img src="./ui/images/icon-github.svg" alt="">
+						<a 
+							href="https://github.com/Taglhydz"
+							target="_blank">
+							Github
+						</a>
+					</div>
+					<div class="phone">
+						<img src="./ui/images/icon-phone.svg" alt="">
+						<p>Téléphone : 07 83 95 79 41</p>
+					</div>
+					<div class="linkedin">
+						<img src="./ui/images/icon-linkedin.svg" alt="">
+						<a 
+							href="https://www.linkedin.com/in/tom-vaillant-67a587329/"
+							target="_blank"
+							>
+							LinkedIn
+						</a>
+					</div>
+				</div>
+				<div class="localisation">
+					<div>
+						<img src="./ui/images/icon-pin.svg" alt="">
+						<a 
+							href="https://www.google.com/maps/place/H%C3%A9rouville-Saint-Clair/@49.2138917,-0.3686845,12.21z/data=!4m6!3m5!1s0x480a67e240c6e181:0x40c14484fbceb50!8m2!3d49.2030936!4d-0.3401301!16zL20vMDJ5bWw2?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
+							target="_blank"
+							>
+							Hérouville-Saint-Clair, Calvados, France
+						</a>
+					</div>
+					<div>
+						<img src="./ui/images/icon-pin.svg" alt="">
+						<a 
+							href="https://www.google.com/maps/place/Campus+CESI/@49.2132423,-0.3559433,14.13z/data=!4m6!3m5!1s0x480a5d86d1a4b05b:0x223d94c1fef946dc!8m2!3d49.2132644!4d-0.3554011!16s%2Fg%2F11gxgf9vbl?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
+							target="_blank"
+							>
+							Campus CESI de Caen
+						</a>
+					</div>
+				</div>
+				<div class="a_propos">
+					<div>
+						<!-- <img src="" alt=""> -->
+						<a 
+							href="mentions-legales.html"
+							>
+							Mentions légales
+						</a>
+					</div>
+				</div>
 			</div>
-			<p>Tom Vaillant - Copyright &copy; 2024 All rights reserved</p>
+			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
 		<script src="./scripts/animations.js"></script>
 	</body>
