ajout de la page projet, icones ajouter et modifié, modification de l'animation et modification du css

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Portfolio</title>
-		<link rel="stylesheet" type="text/css" href="./styles/home-style.css">
+		<link rel="stylesheet" type="text/css" href="./styles/projects-style.css">
 	</head>
 	<body>
 		<header>
@@ -16,24 +16,88 @@
 			</a>
 		</header>
 		<main>
-			<div id="matrix"></div>
-			<section class="aboutMe">
-				<h3>À propos de moi</h3>
-			</section>
-			<section class="skillXp">
-				<h3>Compétences/Expériences</h3>
-			</section>
-			<section class="projects">
-				
-			</section>
-			<section class="contact">
-				<h3>Me contacter</h3>
-				<form action="" class="mail">
-					<input type="text"  id="name"    name="name"    placeholder="NOM et Prénom" required>
-					<input type="email" id="email"   name="email"   placeholder="Email" 		required>
-					<textarea 			id="message" name="message" placeholder="Votre message" required></textarea>
-					<input type="submit" value="Envoyer" id="send">
-				</form>
+			<h1>Projets</h3>
+			<section>
+				<div id="project1" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project2" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project3" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project4" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project5" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project6" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project7" class="project">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
+				<div id="project8" class="projects">
+					<a
+						href=""
+						>
+						<h3>description</h3>
+						<p>
+							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
+						</p>
+					</a>
+				</div>
 			</section>
 		</main>
 		<footer>
@@ -105,6 +169,5 @@
 			</div>
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
-		<script src="./scripts/animations.js"></script>
 	</body>
 </html>
