animation corrigée, footer corrigé et liens vers les autres pages corrigés aussi

--- a/home.html
+++ b/home.html
@@ -11,20 +11,35 @@
 				href="home.html"
 				>
 				<h1>
-					Acceuil
+					Accueil
 				</h1>
 			</a>
 		</header>
 		<main>
 			<div id="matrix"></div>
+
 			<section class="aboutMe">
-				<h3>À propos de moi</h3>
+				<a
+					href="aboutme.html"
+					>
+					<h3>À propos de moi</h3>
+				</a>
 			</section>
+
 			<section class="skillXp">
-				<h3>Compétences/Expériences</h3>
+				<a
+					href="skillxp.html"
+					>
+					<h3>Compétences/Expériences</h3>
+				</a>
 			</section>
+
 			<section class="projects">
-				
+				<a
+					href="projects.html"
+					>
+					<h3>Projets</h3>
+				</a>
 			</section>
 			<section class="contact">
 				<h3>Me contacter</h3>
@@ -44,10 +59,10 @@
 				<div class="contacts">
 					<div class="mail">
 						<a 
-							href="mailto:contact@tom-vaillant.ovh"
+							href="mailto:contact@tomvaillant"
 							>
 							<img src="./ui/images/icon-mail.svg" alt="">
-							contact@tom-vaillant.ovh
+							contact@tomvaillant
 						</a>
 					</div>
 					<div class="github">
