--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,12 @@
 				href="home.html"
 				>
 				<h1>
-					Acceuil
+					Accueil
 				</h1>
 			</a>
 		</header>
 		<main>
-			<h1>Projets</h3>
+			<h1>Projets</h1>
 			<section>
 				<div id="project1" class="project">
 					<a
