--- a/home.html
+++ b/home.html
@@ -15,32 +15,34 @@
 				</h1>
 			</a>
 		</header>
+
 		<main>
 			<div id="matrix"></div>
 
 			<section class="aboutMe">
-				<a
-					href="aboutme.html"
-					>
-					<h3>À propos de moi</h3>
-				</a>
+				<h3>À propos de moi</h3>
+				<p>Né le 11 Novembre 2004, 20 ans, je possède le permis B. Passionné par l'informatique, en particulier par les aspects visuels et techniques du développement de jeux vidéo, je m’intéresse aussi à la mécanique automobile. </p>
+				<img src="./ui/images/" alt="">
 			</section>
 
 			<section class="skillXp">
 				<a
-					href="skillxp.html"
+					href="./pages/skillxp.html"
 					>
 					<h3>Compétences/Expériences</h3>
+					<img src="./ui/images/" alt="">
 				</a>
 			</section>
 
 			<section class="projects">
 				<a
-					href="projects.html"
+					href="./pages/projects.html"
 					>
 					<h3>Projets</h3>
+					<img src="./ui/images/" alt="">
 				</a>
 			</section>
+
 			<section class="contact">
 				<h3>Me contacter</h3>
 				<form action="" class="mail">
@@ -51,6 +53,7 @@
 				</form>
 			</section>
 		</main>
+
 		<footer>
 			<div>
 				<div class="name">
