section "à propose de moi" corrigée

--- a/home.html
+++ b/home.html
@@ -20,17 +20,22 @@
 			<div id="matrix"></div>
 
 			<section class="aboutMe">
-				<h3>À propos de moi</h3>
-				<p>Né le 11 Novembre 2004, 20 ans, je possède le permis B. Passionné par l'informatique, en particulier par les aspects visuels et techniques du développement de jeux vidéo, je m’intéresse aussi à la mécanique automobile. </p>
-				<img src="./ui/images/" alt="">
+				<div class="background-images">
+					<img src="./ui/images/graphism-aboutme.jpg" alt="" class="bg-left">
+					<img src="./ui/images/mecanic-aboutme.jpg" alt="" class="bg-right">
+				</div>
+				<div class="content">
+					<h3>À propos de moi</h3>
+					<p>Bonjour, je m'appelle Tom Vaillant, je suis en 2<sup>ème</sup> année de formation de développeur concepteur d'application au CESI. Né le 11 Novembre 2004, 20 ans, je possède le permis B. Passionné par l'informatique, en particulier par les aspects visuels et techniques du développement de jeux vidéo, je m'intéresse aussi à la mécanique automobile. </p>
+				</div>
 			</section>
-
+			
 			<section class="skillXp">
 				<a
 					href="./pages/skillxp.html"
 					>
 					<h3>Compétences/Expériences</h3>
-					<img src="./ui/images/" alt="">
+					<img src="./ui/images/graphism-skillxp.jpg" alt="">
 				</a>
 			</section>
 
