--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<a
-				href="home.html"
+				href="../home.html"
 				>
 				<h1>
 					Accueil
@@ -49,46 +49,6 @@
 					</a>
 				</div>
 				<div id="project4" class="project">
-					<a
-						href=""
-						>
-						<h3>description</h3>
-						<p>
-							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
-						</p>
-					</a>
-				</div>
-				<div id="project5" class="project">
-					<a
-						href=""
-						>
-						<h3>description</h3>
-						<p>
-							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
-						</p>
-					</a>
-				</div>
-				<div id="project6" class="project">
-					<a
-						href=""
-						>
-						<h3>description</h3>
-						<p>
-							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
-						</p>
-					</a>
-				</div>
-				<div id="project7" class="project">
-					<a
-						href=""
-						>
-						<h3>description</h3>
-						<p>
-							text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien. text qui ne sert a rien.
-						</p>
-					</a>
-				</div>
-				<div id="project8" class="projects">
 					<a
 						href=""
 						>
