responsivité et corrections css

--- a/home.html
+++ b/home.html
@@ -7,13 +7,15 @@
 	</head>
 	<body>
 		<header>
+			<div class="header-left">
+				<h1 class="name">Tom Vaillant</h1>
+				<p class="title">Développeur</p>
+			</div>
 			<a
 				href="home.html"
-				class="current-page"
+				class="current-page nav-link"
 				>
-				<h1>
-					Accueil
-				</h1>
+				<h2>Accueil</h2>
 			</a>
 		</header>
 
@@ -146,11 +148,9 @@
 							Campus CESI de Caen
 						</a>
 					</div>
-				</div>
-				<div class="a_propos">
-					<div>
+					<div class="mentions-item">
 						<a 
-							href="mentions-legales.html"
+							href="pages/mentions-legales.html"
 							>
 							<img src="./ui/images/icon-redirect.svg" alt="">
 							Mentions légales
