--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -170,9 +170,7 @@
 							CESI Campus de Caen
 						</a>
 					</div>
-				</div>
-				<div class="a_propos">
-					<div>
+					<div class="mentions-item">
 						<a 
 							href="mentions-legales.html"
 							>
