--- a/pages/projects.html
+++ b/pages/projects.html
@@ -102,9 +102,7 @@
 							Campus CESI de Caen
 						</a>
 					</div>
-				</div>
-				<div class="a_propos">
-					<div>
+					<div class="mentions-item">
 						<a 
 							href="mentions-legales.html"
 							>
