ajout du favicon

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Portfolio</title>
+		<link rel="icon" type="image/svg+xml" href="./ui/images/favicon.svg">
 		<link rel="stylesheet" type="text/css" href="./styles/home-style.css">
 	</head>
 	<body>
