--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Mentions Légales - Portfolio</title>
+		<link rel="icon" type="image/svg+xml" href="../ui/images/favicon.svg">
 		<link rel="stylesheet" type="text/css" href="../styles/mentions-legales-style.css">
 	</head>
 	<body>
