changement de nom de la home page correction

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<p class="title">Développeur</p>
 			</div>
 			<a
-				href="home.html"
+				href="index.html"
 				class="current-page nav-link"
 				>
 				<h2>Accueil</h2>
