--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="../home.html" class="nav-link">
+			<a href="../index.html" class="nav-link">
 				<h2>Accueil</h2>
 			</a>
 			<h1 class="page-title">Mentions Légales</h1>
