test de confirmation de mail

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 			</div>
 		<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 	</footer>
+	<div id="toast-container"></div>
+	
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 	<script src="./scripts/animations.js"></script>
 	<script src="./scripts/email.js"></script>
