correction adresse mail footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="contacts">
 					<div class="mail">
 						<a 
-							href="mailto:contact@tomvaillant"
+							href="mailto:tom.vaillant.vt@gmail.com"
 							>
 							<img src="./ui/images/icon-mail.svg" alt="">
 							contact@tomvaillant
