corrections du css et antibot mail et tel

--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
 				</div>
 				<div class="contacts">
 					<div class="mail">
-						<a 
-							href="mailto:tom.vaillant.vt@gmail.com"
-							>
+						<a class="mail-link">
 							<img src="./ui/images/icon-mail.svg" alt="">
-							contact@tomvaillant
+							<span class="mail-text"></span>
 						</a>
 					</div>
 					<div class="github">
@@ -117,8 +115,10 @@
 						</a>
 					</div>
 					<div class="phone">
-						<img src="./ui/images/icon-phone.svg" alt="">
-						<p>Téléphone : 07 83 95 79 41</p>
+						<a class="phone-link">
+							<img src="./ui/images/icon-phone.svg" alt="">
+							<span class="phone-text"></span>
+						</a>
 					</div>
 					<div class="linkedin">
 						<a 
@@ -166,5 +166,6 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 	<script src="./scripts/animations.js"></script>
 	<script src="./scripts/email.js"></script>
+	<script src="./scripts/antibot.js"></script>
 </body>
 </html>
