correction footer projets

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -55,11 +55,9 @@
 				</div>
 				<div class="contacts">
 					<div class="mail">
-						<a 
-							href="mailto:contact@tomvaillant"
-							>
+						<a class="mail-link">
 							<img src="../ui/images/icon-mail.svg" alt="">
-							contact@tomvaillant
+							<span class="mail-text"></span>
 						</a>
 					</div>
 					<div class="github">
@@ -71,8 +69,10 @@
 						</a>
 					</div>
 					<div class="phone">
-						<img src="../ui/images/icon-phone.svg" alt="">
-						<p>Téléphone : 07 83 95 79 41</p>
+						<a class="phone-link">
+							<img src="../ui/images/icon-phone.svg" alt="">
+							<span class="phone-text"></span>
+						</a>
 					</div>
 					<div class="linkedin">
 						<a 
