--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -171,7 +171,17 @@
 							CESI Campus de Caen
 						</a>
 					</div>
-					<div class="mentions-item">
+					<div>
+						<a 
+							href="../ui/files/cv_tom_vaillant.pdf"
+							download="cv_tom_vaillant.pdf"
+							target="_self"
+							>
+							<img src="../ui/images/icon-download.svg" alt="">
+							Télécharger mon CV
+						</a>
+					</div>
+					<div>
 						<a 
 							href="mentions-legales.html"
 							>
