rename des fichiers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Portfolio</title>
 		<link rel="icon" type="image/svg+xml" href="./ui/images/favicon.svg">
-		<link rel="stylesheet" type="text/css" href="./styles/home-style.css">
+		<link rel="stylesheet" type="text/css" href="./styles/home_style.css">
 	</head>
 	<body>
 		<header>
@@ -25,8 +25,8 @@
 
 			<section class="aboutMe">
 				<div class="background-images">
-					<img src="./ui/images/graphism-aboutme.jpg" alt="" class="bg-left" >
-					<img src="./ui/images/mecanic-aboutme.jpg"  alt="" class="bg-right">
+					<img src="./ui/images/graphism_aboutme.jpg" alt="" class="bg-left" >
+					<img src="./ui/images/mecanic_aboutme.jpg"  alt="" class="bg-right">
 				</div>
 				<div class="content">
 					<h3>À propos de moi</h3>
@@ -69,10 +69,10 @@
 			</section>
 			<section class="projects">
 				<div class="background-images-projects">
-					<img src="./ui/images/screenproject-jdmpulse.png" 		alt="" class="bg-left-top"    >
-					<img src="./ui/images/screenproject-kudosu.png" 		alt="" class="bg-right-top"   >
-					<img src="./ui/images/screenproject-skyjoterminal.png"  alt="" class="bg-left-bottom" >
-					<img src="./ui/images/screenproject-planetcat.png"  	alt="" class="bg-right-bottom">
+					<img src="./ui/images/screenproject_jdmpulse.png" 		alt="" class="bg-left-top"    >
+					<img src="./ui/images/screenproject_kudosu.png" 		alt="" class="bg-right-top"   >
+					<img src="./ui/images/screenproject_skyjoterminal.png"  alt="" class="bg-left-bottom" >
+					<img src="./ui/images/screenproject_planetcat.png"  	alt="" class="bg-right-bottom">
 				</div>
 				<a
 					href="./pages/projects.html"
@@ -102,7 +102,7 @@
 				<div class="contacts">
 					<div class="mail">
 						<a class="mail-link">
-							<img src="./ui/images/icon-mail.svg" alt="">
+							<img src="./ui/images/icon_mail.svg" alt="">
 							<span class="mail-text"></span>
 						</a>
 					</div>
@@ -110,13 +110,13 @@
 						<a 
 							href="https://github.com/Taglhydz"
 							target="_blank">
-							<img src="./ui/images/icon-github.svg" alt="">
+							<img src="./ui/images/icon_github.svg" alt="">
 							Github
 						</a>
 					</div>
 					<div class="phone">
 						<a class="phone-link">
-							<img src="./ui/images/icon-phone.svg" alt="">
+							<img src="./ui/images/icon_phone.svg" alt="">
 							<span class="phone-text"></span>
 						</a>
 					</div>
@@ -125,7 +125,7 @@
 							href="https://www.linkedin.com/in/tom-vaillant-67a587329/"
 							target="_blank"
 							>
-							<img src="./ui/images/icon-linkedin.svg" alt="">
+							<img src="./ui/images/icon_linkedin.svg" alt="">
 							LinkedIn
 						</a>
 					</div>
@@ -136,7 +136,7 @@
 							href="https://www.google.com/maps/place/H%C3%A9rouville-Saint-Clair/@49.2138917,-0.3686845,12.21z/data=!4m6!3m5!1s0x480a67e240c6e181:0x40c14484fbceb50!8m2!3d49.2030936!4d-0.3401301!16zL20vMDJ5bWw2?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
 							target="_blank"
 							>
-							<img src="./ui/images/icon-pin.svg" alt="">
+							<img src="./ui/images/icon_pin.svg" alt="">
 							Hérouville-Saint-Clair, Calvados, France
 						</a>
 					</div>
@@ -145,7 +145,7 @@
 							href="https://www.google.com/maps/place/Campus+CESI/@49.2132423,-0.3559433,14.13z/data=!4m6!3m5!1s0x480a5d86d1a4b05b:0x223d94c1fef946dc!8m2!3d49.2132644!4d-0.3554011!16s%2Fg%2F11gxgf9vbl?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
 							target="_blank"
 							>
-							<img src="./ui/images/icon-pin.svg" alt="">
+							<img src="./ui/images/icon_pin.svg" alt="">
 							Campus CESI de Caen
 						</a>
 					</div>
@@ -155,15 +155,15 @@
 							download="cv_tom_vaillant.pdf"
 							target="_self"
 							>
-							<img src="./ui/images/icon-download.svg" alt="">
+							<img src="./ui/images/icon_download.svg" alt="">
 							Télécharger mon CV
 						</a>
 					</div>
 					<div>
 						<a 
-							href="pages/mentions-legales.html"
+							href="pages/mentions_legales.html"
 							>
-							<img src="./ui/images/icon-redirect.svg" alt="">
+							<img src="./ui/images/icon_redirect.svg" alt="">
 							Mentions légales
 						</a>
 					</div>
