--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Projets - Portfolio</title>
 		<link rel="icon" type="image/svg+xml" href="../ui/images/favicon.svg">
-		<link rel="stylesheet" type="text/css" href="../styles/projects-style.css">
+		<link rel="stylesheet" type="text/css" href="../styles/projects_style.css">
 	</head>
 	<body>
 		<header>
@@ -56,7 +56,7 @@
 				<div class="contacts">
 					<div class="mail">
 						<a class="mail-link">
-							<img src="../ui/images/icon-mail.svg" alt="">
+							<img src="../ui/images/icon_mail.svg" alt="">
 							<span class="mail-text"></span>
 						</a>
 					</div>
@@ -64,13 +64,13 @@
 						<a 
 							href="https://github.com/Taglhydz"
 							target="_blank">
-							<img src="../ui/images/icon-github.svg" alt="">
+							<img src="../ui/images/icon_github.svg" alt="">
 							Github
 						</a>
 					</div>
 					<div class="phone">
 						<a class="phone-link">
-							<img src="../ui/images/icon-phone.svg" alt="">
+							<img src="../ui/images/icon_phone.svg" alt="">
 							<span class="phone-text"></span>
 						</a>
 					</div>
@@ -79,7 +79,7 @@
 							href="https://www.linkedin.com/in/tom-vaillant-67a587329/"
 							target="_blank"
 							>
-							<img src="../ui/images/icon-linkedin.svg" alt="">
+							<img src="../ui/images/icon_linkedin.svg" alt="">
 							LinkedIn
 						</a>
 					</div>
@@ -90,7 +90,7 @@
 							href="https://www.google.com/maps/place/H%C3%A9rouville-Saint-Clair/@49.2138917,-0.3686845,12.21z/data=!4m6!3m5!1s0x480a67e240c6e181:0x40c14484fbceb50!8m2!3d49.2030936!4d-0.3401301!16zL20vMDJ5bWw2?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
 							target="_blank"
 							>
-							<img src="../ui/images/icon-pin.svg" alt="">
+							<img src="../ui/images/icon_pin.svg" alt="">
 							Hérouville-Saint-Clair, Calvados, France
 						</a>
 					</div>
@@ -99,7 +99,7 @@
 							href="https://www.google.com/maps/place/Campus+CESI/@49.2132423,-0.3559433,14.13z/data=!4m6!3m5!1s0x480a5d86d1a4b05b:0x223d94c1fef946dc!8m2!3d49.2132644!4d-0.3554011!16s%2Fg%2F11gxgf9vbl?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
 							target="_blank"
 							>
-							<img src="../ui/images/icon-pin.svg" alt="">
+							<img src="../ui/images/icon_pin.svg" alt="">
 							Campus CESI de Caen
 						</a>
 					</div>
@@ -109,15 +109,15 @@
 							download="cv_tom_vaillant.pdf"
 							target="_self"
 							>
-							<img src="../ui/images/icon-download.svg" alt="">
+							<img src="../ui/images/icon_download.svg" alt="">
 							Télécharger mon CV
 						</a>
 					</div>
 					<div>
 						<a 
-							href="mentions-legales.html"
+							href="mentions_legales.html"
 							>
-							<img src="../ui/images/icon-redirect.svg" alt="">
+							<img src="../ui/images/icon_redirect.svg" alt="">
 							Mentions légales
 						</a>
 					</div>
@@ -125,6 +125,6 @@
 			</div>
 			<p>Tom Vaillant - Copyright &copy; 2025 All rights reserved</p>
 		</footer>
-		<script src="../scripts/projects-animations.js"></script>
+		<script src="../scripts/projects_animations.js"></script>
 	</body>
 </html>
